# llm-systems-foundations

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_torch_basics.ipynb  02_linear_regression.ipynb
scripts/: train_linear_regression.py
src/lsf/: __init__.py  config.py  data.py  metrics.py  models.py  seed.py  train.py
